# lazy-todo-app

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  README_zh.md  package-lock.json  package.json  start.sh
doc/: .gitignore  00-overview.md  01-quick-start.md  01-repo-map.md  02-architecture.md  03-tech-stack.md  03-workflows.md  04-data-and-api.md  04-repo-map.md  05-data-and-api.md  06-runbook.md  06-workflows.md  07-conventions.md  08-build.md  09-document.md  09-testing.md  10-runbook.md  11-observability.md  12-document.md  Makefile  ai-guide.md  appendix-01-faq.md  appendix-02-glossary.md  build_pages_site.py  conf.py  index.md  pyproject.toml  requirements.txt
doc/_static/: custom.css
doc/_templates/: layout.html
doc/adr/: index.md  template.md
doc/changes/: index.md
doc/locale/: README.md
doc/locale/zh_CN/LC_MESSAGES/: 00-overview.mo  00-overview.po  01-quick-start.po  01-repo-map.mo  01-repo-map.po  02-architecture.mo  02-architecture.po  03-tech-stack.mo  03-tech-stack.po  03-workflows.mo  03-workflows.po  04-data-and-api.mo  04-data-and-api.po  04-repo-map.po  05-conventions.mo  05-conventions.po  05-data-and-api.po  06-runbook.mo  06-runbook.po  06-workflows.po  07-conventions.po  07-testing.mo  07-testing.po  08-build.mo  08-build.po  09-document.po  09-testing.po  10-runbook.po  11-observability.po  12-document.mo  12-document.po  ai-guide.mo  ai-guide.po  appendix-01-faq.po  appendix-02-glossary.mo  appendix-02-glossary.po  index.mo  index.po
doc/locale/zh_CN/LC_MESSAGES/adr/: index.mo  index.po  template.mo  template.po
scripts/: check_pkb_staleness.py  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: agents.rs  app.rs  mod.rs  note.rs  pomodoro.rs  secretary.rs  todo.rs
src-tauri/src/models/: agents.rs  mod.rs  note.rs  pomodoro.rs  secretary.rs  settings.rs  todo.rs  toolbox.rs
(+154 files in other folders)
