[project]
name = "lazy-todo-app-docs"
version = "0.1.0"
description = "Bilingual PKB docs for Lazy Todo App"
authors = [
    { name = "Walter Fan", email = "walterfan@ustc.edu" }
]
readme = "index.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "sphinx (>=9.1.0,<10.0.0)",
    "myst-parser (>=5.0.0,<6.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)",
    "sphinx-intl (>=2.3.2,<3.0.0)",
    "sphinxcontrib-mermaid (>=2.0.1,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
