[package]
name = "lazy-todo-app"
version = "1.0.0"
edition = "2021"

[lib]
name = "lazy_todo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "load_extension"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.13", features = ["json", "blocking"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
